Fix alignment of left/right overview columns
Also adds left margin for headings on mobile

--- a/app/styles/utilities.css
+++ b/app/styles/utilities.css
@@ -100,6 +100,7 @@ html[data-theme='dark'] .contentContainer {
     @media (--mobile-device) {
       padding: 0;
       margin-bottom: 10px;
+      margin-left: 0.5rem;
     }
   }
 }
